--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "aiv-r2",
+    "name": "AI Vision2",
     "slug": "aiv-r2",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -25,6 +25,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-build-properties",
+      {
+        "android":{
+          "usesCleartextTraffic": "true"
+        }
+      }
+    ]
   }
 }
