--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "AI Vision2",
+    "name": "aiv-r2",
     "slug": "aiv-r2",
     "version": "1.0.0",
     "orientation": "portrait",
