add http awesomeness

--- a/app.json
+++ b/app.json
@@ -11,6 +11,16 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "plugins": [
+      [
+        "expo-build-properties", 
+        {
+          "android": {
+            "usesCleartextTraffic": true
+          }
+        }
+      ]
+    ],
     "assetBundlePatterns": [
       "**/*"
     ],
@@ -21,18 +31,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.yashweblife.aivr2"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": [
-      "expo-build-properties",
-      {
-        "android":{
-          "usesCleartextTraffic": "true"
-        }
+    "extra": {
+      "eas": {
+        "projectId": "a11c31cc-e33d-4577-8ef9-2169a98a0811"
       }
-    ]
+    }
   }
 }
