--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "eas build -p android --profile preview --local"
   },
   "dependencies": {
     "axios": "^1.6.7",
