Add new dependencies and update existing ones in package.json

--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "build": "eas build -p android --profile preview --local"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "expo": "~50.0.8",
+    "expo-build-properties": "~0.11.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-vector-icons": "^10.0.3",
-    "expo-build-properties": "~0.11.1"
+    "react-native-storage": "^1.0.1",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
